cmake_minimum_required(VERSION 3.22.1)
project("progressive_native")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(
    progressive_native
    SHARED
    src/jumptodate.cpp
    src/json_parser.cpp
    src/relation.cpp
    src/exporter.cpp
    src/eventcache.cpp
    src/translate.cpp
    src/proxy.cpp
    src/yggdrasil.cpp
    src/markdown.cpp
    src/matrix_api.cpp
    src/account_data_utils.cpp
    src/account_export.cpp
    src/audio_engine.cpp
    src/auth_models.cpp
    src/media_filter.cpp
    src/content_filter.cpp
    src/network_stats.cpp
    src/masquerade.cpp
    src/megolm_decryptor.cpp
    src/olm_session.cpp
    src/sas_verification.cpp
    src/user_mask.cpp
    src/chunked_upload.cpp
    src/chat_features.cpp
    src/debug_service.cpp
    src/invitation_hide.cpp
    src/thread_aggregator.cpp
    src/user_messages.cpp
    src/room_version.cpp
    src/chat_preview.cpp
    src/ram_monitor.cpp
    src/cache_manager.cpp
    src/call_models.cpp
    src/canonical_json.cpp
    src/message_aggregator.cpp
    src/room_info.cpp
    src/deleted_archive.cpp
    src/search_index.cpp
    src/module_loader.cpp
    src/notification.cpp
    src/room_mirror.cpp
    src/input_tools.cpp
    src/llm.cpp
    src/read_receipts.cpp
    src/room_analytics.cpp
    src/room_content.cpp
    src/room_counter.cpp
    src/chat_tools.cpp
    src/lang_detect.cpp
    src/avatar_history.cpp
    src/event_link.cpp
    src/lightweight_call.cpp
    src/scheduled_edit.cpp
    src/svg_draw.cpp
    src/profile_swiper.cpp
    src/rainbow.cpp
    src/text_formats.cpp
    src/tls_bridge.cpp
    src/url_tools.cpp
    src/notif_priority.cpp
    src/matrix_patterns.cpp
    src/desync_detector.cpp
    src/latency_stats.cpp
    src/lightweight_settings.cpp
    src/live_draft.cpp
    src/string_utils.cpp
    src/location_sharing.cpp
    src/color_utils.cpp
    src/e2ee_utils.cpp
    src/thumbnail.cpp
    src/waveform.cpp
    src/session_timeout.cpp
    src/password_validator.cpp
    src/spellcheck.cpp
    src/draft_manager.cpp
    src/link_preview.cpp
    src/text_stats.cpp
    src/hash_utils.cpp
    src/http_client.cpp
    src/room_stats.cpp
    src/mention_parser.cpp
    src/poll_utils.cpp
    src/reaction_utils.cpp
    src/file_validator.cpp
    src/graph_utils.cpp
    src/date_utils.cpp
    src/message_queue.cpp
    src/pinned_events.cpp
    src/server_capabilities.cpp
    src/username_validator.cpp
    src/emoji_analyzer.cpp
    src/identity_utils.cpp
    src/notif_analyzer.cpp
    src/sync_analyzer.cpp
    src/sync_models.cpp
    src/user_rating.cpp
    src/event_timeline.cpp
    src/event_utils.cpp
    src/room_directory.cpp
    src/widget_utils.cpp
    src/server_notice_manager.cpp
    src/poll_manager.cpp
    src/room_directory_manager.cpp
    src/room_state_manager.cpp
    src/space_graph.cpp
    src/weather_utils.cpp
    src/message_scheduler.cpp
    src/notif_mode.cpp
    src/alarm_engine.cpp
    src/progressive_stubs.cpp
    src/widget_manager.cpp
    src/user_directory.cpp
    src/transparent_overlay.cpp
    src/thread_manager.cpp
    src/text_undo_manager.cpp
    src/terms_manager.cpp
    src/sync_filter.cpp
    src/spoiler_manager.cpp
    src/session_manager_full.cpp
    src/room_state.cpp
    src/room_permissions_manager.cpp
    src/profiler.cpp
    src/pin_manager.cpp
    src/oidc_manager.cpp
    src/media_viewer.cpp
    src/media_upload_manager.cpp
    src/live_location.cpp
    src/key_backup_manager.cpp
    src/identity_server_manager.cpp
    src/event_relations_manager.cpp
    src/draft_manager_full.cpp
    src/device_naming.cpp
    src/composer_manager.cpp
    src/call_manager.cpp
    src/webrtc_utils.cpp
    src/sso_utils.cpp
    src/backup_utils.cpp
    src/device_manager.cpp
    src/device_manager_full.cpp
    src/presence_utils.cpp
    src/room_permissions.cpp
    src/room_summary.cpp
    src/room_tombstone.cpp
    src/membership_utils.cpp
    src/event_validator.cpp
    src/room_encryption.cpp
    src/login_utils.cpp
    src/account_utils.cpp
    src/connection_monitor.cpp
    src/create_room.cpp
    src/push_rules.cpp
    src/raw_service.cpp
    src/space_utils.cpp
    src/event_relations.cpp
    src/e2ee_decoration.cpp
    src/room_list.cpp
    src/room_uploads.cpp
    src/media_utils.cpp
    src/notif_settings.cpp
    src/invite_utils.cpp
    src/verification_utils.cpp
    src/session_manager.cpp
    src/signout_service.cpp
    src/auth_utils.cpp
    src/content_scanner.cpp
    src/event_encryption.cpp
    src/event_models.cpp
    src/federation_version.cpp
    src/report_utils.cpp
    src/message_retry.cpp
    src/sync_utils.cpp
    src/event_display.cpp
    src/permalink.cpp
    src/network_monitor.cpp
    src/client_info.cpp
    src/keyshare.cpp
    src/displayname_utils.cpp
    src/message_location.cpp
    src/timeline_chunk.cpp
    src/timeline_utils.cpp
    src/cross_signing.cpp
    src/cross_signing_manager.cpp
    src/crypto_algorithms.cpp
    src/crypto_models.cpp
    src/terms_service.cpp
    src/edit_history.cpp
    src/read_marker.cpp
    src/slash_command.cpp
    src/sliding_sync.cpp
    src/sqlite_wrapper.cpp
    src/typing_monitor.cpp
    src/unified_push.cpp
    src/url_preview.cpp
    src/web_search.cpp
    src/power_levels.cpp
    src/well_known.cpp
    src/room_sort.cpp
    src/key_backup.cpp
    src/notif_format.cpp
    src/notif_formatter.cpp
    src/matrix_error.cpp
    src/message_content.cpp
    src/message_extras.cpp
    src/agent_executor.cpp
    src/push_condition.cpp
    src/sender_notif_filter.cpp
    src/string_order.cpp
    src/event_classifier.cpp
    src/encrypted_file.cpp
    src/content_guard.cpp
    src/user_status.cpp
    src/offline_cache.cpp
    src/oidc_auth.cpp
    src/olm.cpp
    src/openid_token.cpp
    src/message_preview_utils.cpp
    src/account_deactivation_utils.cpp
    src/account_validator.cpp
    src/admin_utils.cpp
    src/attachment_handler.cpp
    src/avatar_color_gen.cpp
    src/avatar_cropper.cpp
    src/avatar_picker.cpp
    src/background_scheduler.cpp
    src/backup_restore_utils.cpp
    src/biometric_auth.cpp
    src/config_loader.cpp
    src/content_report_utils.cpp
    src/crash_reporter.cpp
    src/cross_sign_bootstrap.cpp
    src/cross_sign_utils.cpp
    src/cross_signing_status.cpp
    src/crypto_init_utils.cpp
    src/custom_status.cpp
    src/deeplink_parser.cpp
    src/dehydrate_utils.cpp
    src/device_verifier.cpp
    src/dispatch_manager.cpp
    src/emoji_search.cpp
    src/emoji_sticker.cpp
    src/encryption_key_backup.cpp
    src/encryption_verify_utils.cpp
    src/event_batcher.cpp
    src/event_retention.cpp
    src/favorite_messages.cpp
    src/font_manager.cpp
    src/gossip_manager.cpp
    src/identity_hash.cpp
    src/identity_lookup.cpp
    src/identity_server_lookup.cpp
    src/ignore_utils.cpp
    src/invite_validator.cpp
    src/key_export_utils.cpp
    src/key_share.cpp
    src/knock_utils.cpp
    src/language_switcher.cpp
    src/lazy_loading_utils.cpp
    src/link_previewer.cpp
    src/location_share.cpp
    src/login_token_util.cpp
    src/markdown_parser.cpp
    src/matrix_id_utils.cpp
    src/media_compressor.cpp
    src/media_download.cpp
    src/media_gallery.cpp
    src/media_scanner.cpp
    src/media_thumbnailer.cpp
    src/member_count_cache.cpp
    src/message_edit.cpp
    src/message_hasher.cpp
    src/message_searcher.cpp
    src/message_send_queue.cpp
    src/notification_badge.cpp
    src/notification_cleaner.cpp
    src/notification_group.cpp
    src/olm_utils.cpp
    src/openid_token_utils.cpp
    src/otk_utils.cpp
    src/permission_validator.cpp
    src/power_level_visualizer.cpp
    src/presence_sync.cpp
    src/public_room_lister.cpp
    src/push_analytics.cpp
    src/push_translator.cpp
    src/qr_code_utils.cpp
    src/reaction_sync.cpp
    src/read_receipt_formatter.cpp
    src/read_receipt_utils.cpp
    src/read_tracker.cpp
    src/recovery_utils.cpp
    src/registration_flow.cpp
    src/room_access_control.cpp
    src/room_activity.cpp
    src/room_alias_validator.cpp
    src/room_autocomplete.cpp
    src/room_bridge_utils.cpp
    src/room_forgot_utils.cpp
    src/room_kicker.cpp
    src/room_knock_manager.cpp
    src/room_mute_scheduler.cpp
    src/room_previewer.cpp
    src/room_sidebar.cpp
    src/room_state_event_utils.cpp
    src/room_suggestions.cpp
    src/room_type_detector.cpp
    src/room_upgrade_utils.cpp
    src/search_utils.cpp
    src/secret_sharing.cpp
    src/secret_storage_utils.cpp
    src/server_support.cpp
    src/session_export.cpp
    src/session_metadata_utils.cpp
    src/session_signout.cpp
    src/spellcheck_utils.cpp
    src/spotlight_search_utils.cpp
    src/sso_handler.cpp
    src/state_resolver.cpp
    src/sync_optimizer.cpp
    src/sync_scheduler.cpp
    src/sync_state_monitor.cpp
    src/task_queue.cpp
    src/theme_manager.cpp
    src/thirdparty_invite.cpp
    src/thread_summary.cpp
    src/thread_utils.cpp
    src/timeline_filter_utils.cpp
    src/topic_parser.cpp
    src/typing_indicator.cpp
    src/user_badge_utils.cpp
    src/user_block_manager.cpp
    src/verification_request_utils.cpp
    src/voice_broadcast_manager.cpp
    src/voice_message_utils.cpp
    src/widget_api_utils.cpp
    src/widget_manager_ext.cpp
    src/widget_url_check.cpp
    src/event_content_utils.cpp
    src/key_verification_utils.cpp
    src/markdown_utils.cpp
    src/pagination_utils.cpp
    src/permission_checker.cpp
    src/room_tag_utils.cpp
    src/session_watchdog.cpp
    src/thirdparty_utils.cpp
    src/thumbnail_utils.cpp
    src/user_report_utils.cpp
    src/voice_broadcast_utils.cpp
    src/backup_keys_utils.cpp
    src/custom_emoji_utils.cpp
    src/display_name_utils.cpp
    src/event_hash_utils.cpp
    src/event_highlight_display.cpp
    src/event_origin_utils.cpp
    src/message_format_utils.cpp
    src/message_link_utils.cpp
    src/notification_sound_utils.cpp
    src/push_rule_utils.cpp
    src/room_child_utils.cpp
    src/room_notification_utils.cpp
    src/room_parent_utils.cpp
    src/room_role_utils.cpp
    src/room_visibility_utils.cpp
    src/toast_notification_utils.cpp
    src/url_preview_utils.cpp
    src/avatar_fallback_utils.cpp
    src/avatar_url_utils.cpp
    src/device_rename_utils.cpp
    src/event_forward_utils.cpp
    src/identity_server_utils.cpp
    src/notification_action_utils.cpp
    src/push_gateway_utils.cpp
    src/session_info_utils.cpp
    src/url_render_utils.cpp
    src/user_directory_formatter.cpp
    src/whois_utils.cpp
    src/progressive_core.cpp
    src/msg_encryption.cpp
    src/key_backup_mgr.cpp
    src/room_join_handler.cpp
    src/federation_client.cpp
    src/device_verif.cpp
    src/sso_auth.cpp
    src/widget_host.cpp
    src/space_hierarchy.cpp
    src/read_receipt_mgr.cpp
    src/typing_handler.cpp
    src/presence_tracker.cpp
    src/matrix_events.cpp
    src/room_manager.cpp
    src/crypto_ops.cpp
    src/sync_engine.cpp
    src/notif_handler.cpp
    src/media_tools.cpp
    src/user_profiles.cpp
    src/jni_bridge.cpp
    src/eventdb.cpp
    src/sync_status_utils.cpp
    src/timeline_controller.cpp
    src/message_processor.cpp
    src/room_state_engine.cpp
    src/sync_response_parser.cpp
    src/event_builder.cpp
    src/account_manager.cpp
    src/push_controller.cpp
    src/room_directory_full.cpp
    src/e2ee_manager.cpp
    src/space_controller.cpp
    src/widget_controller.cpp
    src/call_signaling.cpp
    src/search_controller.cpp
    src/backup_controller.cpp
    src/notification_formatter.cpp
    src/location_controller.cpp
    src/voice_broadcast_ctrl.cpp
    src/thread_controller.cpp
    src/reaction_controller.cpp
    src/read_receipt_controller.cpp
    src/olm_manager.cpp
    src/sas_manager.cpp
    src/identity_server.cpp
    src/sliding_sync_manager.cpp
    src/inbound_federation.cpp
    src/matrix_error_handler.cpp
    src/room_upgrade_handler.cpp
    src/progressive_combined_1.cpp
    src/progressive_combined_2.cpp
    src/progressive_combined_3.cpp
    src/progressive_combined_4.cpp
    src/progressive_combined_5.cpp
    src/progressive_combined_6.cpp
    src/key_share_handler.cpp
    src/progressive_combined_7.cpp
    src/progressive_combined_8.cpp
    src/progressive_combined_9.cpp
    src/auth_service_v4.cpp
    src/cross_sign_v4.cpp
    src/device_list_v4.cpp
    src/e2ee_decor_v4.cpp
    src/event_relations_v4.cpp
    src/federation_v4.cpp
    src/identity_v4.cpp
    src/key_backup_v4.cpp
    src/location_v4.cpp
    src/media_upload_v4.cpp
    src/megolm_v4.cpp
    src/olm_crypto_v4.cpp
    src/poll_engine_v4.cpp
    src/presence_v4.cpp
    src/push_rules_v4.cpp
    src/read_receipt_v4.cpp
    src/room_summary_v4.cpp
    src/room_upgrade_v4.cpp
    src/secret_store_v4.cpp
    src/sdk_port_01.cpp
    src/sdk_port_02.cpp
    src/sdk_port_03.cpp
    src/sdk_port_04.cpp
    src/sdk_port_05.cpp
    src/sdk_port_06.cpp
    src/sdk_port_07.cpp
    src/sdk_port_08.cpp
    src/sdk_port_09.cpp
    src/sdk_port_10.cpp
    src/sdk_port_11.cpp
    src/sdk_port_12.cpp
    src/sdk_port_13.cpp
    src/sdk_port_14.cpp
    src/sdk_port_15.cpp
    src/sdk_port_16.cpp
    src/sdk_port_17.cpp
    src/sdk_port_18.cpp
    src/sdk_port_19.cpp
    src/sdk_port_20.cpp
    src/sdk_port_21.cpp
    src/sdk_port_22.cpp
    src/sdk_port_23.cpp
    src/sdk_port_24.cpp
    src/sdk_port_25.cpp
    src/sdk_port_26.cpp
    src/sdk_port_27.cpp
    src/sdk_port_28.cpp
    src/send_queue_v4.cpp
    src/server_notice_v4.cpp
    src/sliding_sync_v4.cpp
    src/space_graph_v4.cpp
    src/sync_handler_v4.cpp
    src/thread_mgr_v4.cpp
    src/timeline_chunk_v4.cpp
    src/verification_v4.cpp
    src/voice_broadcast_v4.cpp
    src/widget_driver_v4.cpp
)

# --- Download SQLite3 amalgamation at configure time ---
# sqlite3.c (255k lines) is NOT stored in the repo.
# Downloaded once, cached in build dir.
set(SQLITE3_DIR "${CMAKE_BINARY_DIR}/sqlite-amalgamation-3450200")
set(SQLITE3_SRC "${SQLITE3_DIR}/sqlite3.c")
if(NOT EXISTS "${SQLITE3_SRC}")
    message(STATUS "Downloading SQLite3 amalgamation from sqlite.org...")
    file(DOWNLOAD
        "https://sqlite.org/2024/sqlite-amalgamation-3450200.zip"
        "${CMAKE_BINARY_DIR}/sqlite3.zip"
        SHOW_PROGRESS
        STATUS download_status
        TIMEOUT 120
    )
    list(GET download_status 0 download_code)
    if(NOT download_code EQUAL 0)
        list(GET download_status 1 download_err)
        message(FATAL_ERROR "Failed to download SQLite: ${download_err}")
    src/hexa_5000.cpp
    src/hexa_5001.cpp
    src/hexa_5002.cpp
    src/hexa_5003.cpp
    src/hexa_5004.cpp
    src/hexa_5005.cpp
    src/hexa_5006.cpp
    src/hexa_5007.cpp
    src/hexa_5008.cpp
    src/hexa_5009.cpp
    src/hexa_5010.cpp
    src/hexa_5011.cpp
    src/hexa_5012.cpp
    src/hexa_5013.cpp
    src/hexa_5014.cpp
    src/hexa_5015.cpp
    src/hexa_5016.cpp
    src/hexa_5017.cpp
    src/hexa_5018.cpp
    src/hexa_5019.cpp
    src/hexa_5020.cpp
    src/hexa_5021.cpp
    src/hexa_5022.cpp
    src/hexa_5023.cpp
    src/hexa_5024.cpp
    src/hexa_5025.cpp
    src/hexa_5026.cpp
    src/hexa_5027.cpp
    src/hexa_5028.cpp
    src/hexa_5029.cpp
    src/hexa_5030.cpp
    src/hexa_5031.cpp
    src/hexa_5032.cpp
    src/hexa_5033.cpp
    src/hexa_5034.cpp
    src/hexa_5035.cpp
    src/hexa_5036.cpp
    src/hexa_5037.cpp
    src/hexa_5038.cpp
    src/hexa_5039.cpp
    src/hexa_5040.cpp
    src/hexa_5041.cpp
    src/hexa_5042.cpp
    src/hexa_5043.cpp
    src/hexa_5044.cpp
    src/hexa_5045.cpp
    src/hexa_5046.cpp
    src/hexa_5047.cpp
    src/hexa_5048.cpp
    src/hexa_5049.cpp
    src/hexa_5050.cpp
    src/hexa_5051.cpp
    src/hexa_5052.cpp
    src/hexa_5053.cpp
    src/hexa_5054.cpp
    src/hexa_5055.cpp
    src/hexa_5056.cpp
    src/hexa_5057.cpp
    src/hexa_5058.cpp
    src/hexa_5059.cpp
    src/hexa_5060.cpp
    src/hexa_5061.cpp
    src/hexa_5062.cpp
    src/hexa_5063.cpp
    src/hexa_5064.cpp
    src/hexa_5065.cpp
    src/hexa_5066.cpp
    src/hexa_5067.cpp
    src/hexa_5068.cpp
    src/hexa_5069.cpp
    src/hexa_5070.cpp
    src/hexa_5071.cpp
    src/hexa_5072.cpp
    src/hexa_5073.cpp
    src/hexa_5074.cpp
    src/hexa_5075.cpp
    src/hexa_5076.cpp
    src/hexa_5077.cpp
    src/hexa_5078.cpp
    src/hexa_5079.cpp
    src/hexa_5080.cpp
    src/hexa_5081.cpp
    src/hexa_5082.cpp
    src/hexa_5083.cpp
    src/hexa_5084.cpp
    src/hexa_5085.cpp
    src/hexa_5086.cpp
    src/hexa_5087.cpp
    src/hexa_5088.cpp
    src/hexa_5089.cpp
    src/hexa_5090.cpp
    src/hexa_5091.cpp
    src/hexa_5092.cpp
    src/hexa_5093.cpp
    src/hexa_5094.cpp
    src/hexa_5095.cpp
    src/hexa_5096.cpp
    src/hexa_5097.cpp
    src/hexa_5098.cpp
    src/hexa_5099.cpp
    src/hexa_5100.cpp
    src/hexa_5101.cpp
    src/hexa_5102.cpp
    src/hexa_5103.cpp
    src/hexa_5104.cpp
    src/hexa_5105.cpp
    src/hexa_5106.cpp
    src/hexa_5107.cpp
    src/hexa_5108.cpp
    src/hexa_5109.cpp
    src/hexa_5110.cpp
    src/hexa_5111.cpp
    src/hexa_5112.cpp
    src/hexa_5113.cpp
    src/hexa_5114.cpp
    src/hexa_5115.cpp
    src/hexa_5116.cpp
    src/hexa_5117.cpp
    src/hexa_5118.cpp
    src/hexa_5119.cpp
    src/hexa_5120.cpp
    src/hexa_5121.cpp
    src/hexa_5122.cpp
    src/hexa_5123.cpp
    src/hexa_5124.cpp
    src/hexa_5125.cpp
    src/hexa_5126.cpp
    src/hexa_5127.cpp
    src/hexa_5128.cpp
    src/hexa_5129.cpp
    src/hexa_5130.cpp
    src/hexa_5131.cpp
    src/hexa_5132.cpp
    src/hexa_5133.cpp
    src/hexa_5134.cpp
    src/hexa_5135.cpp
    src/hexa_5136.cpp
    src/hexa_5137.cpp
    src/hexa_5138.cpp
    src/hexa_5139.cpp
    src/hexa_5140.cpp
    src/hexa_5141.cpp
    src/hexa_5142.cpp
    src/hexa_5143.cpp
    src/hexa_5144.cpp
    src/hexa_5145.cpp
    src/hexa_5146.cpp
    src/hexa_5147.cpp
    src/hexa_5148.cpp
    src/hexa_5149.cpp
    src/hexa_5150.cpp
    src/hexa_5151.cpp
    src/hexa_5152.cpp
    src/hexa_5153.cpp
    src/hexa_5154.cpp
    src/hexa_5155.cpp
    src/hexa_5156.cpp
    src/hexa_5157.cpp
    src/hexa_5158.cpp
    src/hexa_5159.cpp
    src/hexa_5160.cpp
    src/hexa_5161.cpp
    src/hexa_5162.cpp
    src/hexa_5163.cpp
    src/hexa_5164.cpp
    src/hexa_5165.cpp
    src/hexa_5166.cpp
    src/hexa_5167.cpp
    src/hexa_5168.cpp
    src/hexa_5169.cpp
    src/hexa_5170.cpp
    src/hexa_5171.cpp
    src/hexa_5172.cpp
    src/hexa_5173.cpp
    src/hexa_5174.cpp
    src/hexa_5175.cpp
    src/hexa_5176.cpp
    src/hexa_5177.cpp
    src/hexa_5178.cpp
    src/hexa_5179.cpp
    src/hexa_5180.cpp
    src/hexa_5181.cpp
    src/hexa_5182.cpp
    src/hexa_5183.cpp
    src/hexa_5184.cpp
    src/hexa_5185.cpp
    src/hexa_5186.cpp
    src/hexa_5187.cpp
    src/hexa_5188.cpp
    src/hexa_5189.cpp
    src/hexa_5190.cpp
    src/hexa_5191.cpp
    src/hexa_5192.cpp
    src/hexa_5193.cpp
    src/hexa_5194.cpp
    src/hexa_5195.cpp
    src/hexa_5196.cpp
    src/hexa_5197.cpp
    src/hexa_5198.cpp
    src/hexa_5199.cpp
    src/hexa_5200.cpp
    src/hexa_5201.cpp
    src/hexa_5202.cpp
    src/hexa_5203.cpp
    src/hexa_5204.cpp
    src/hexa_5205.cpp
    src/hexa_5206.cpp
    src/hexa_5207.cpp
    src/hexa_5208.cpp
    src/hexa_5209.cpp
    src/hexa_5210.cpp
    src/hexa_5211.cpp
    src/hexa_5212.cpp
    src/hexa_5213.cpp
    src/hexa_5214.cpp
    src/hexa_5215.cpp
    src/hexa_5216.cpp
    src/hexa_5217.cpp
    src/hexa_5218.cpp
    src/hexa_5219.cpp
    src/hexa_5220.cpp
    src/hexa_5221.cpp
    src/hexa_5222.cpp
    src/hexa_5223.cpp
    src/hexa_5224.cpp
    src/hexa_5225.cpp
    src/hexa_5226.cpp
    src/hexa_5227.cpp
    src/hexa_5228.cpp
    src/hexa_5229.cpp
    src/hexa_5230.cpp
    src/hexa_5231.cpp
    src/hexa_5232.cpp
    src/hexa_5233.cpp
    src/hexa_5234.cpp
    src/hexa_5235.cpp
    src/hexa_5236.cpp
    src/hexa_5237.cpp
    src/hexa_5238.cpp
    src/hexa_5239.cpp
    src/hexa_5240.cpp
    src/hexa_5241.cpp
    src/hexa_5242.cpp
    src/hexa_5243.cpp
    src/hexa_5244.cpp
    src/hexa_5245.cpp
    src/hexa_5246.cpp
    src/hexa_5247.cpp
    src/hexa_5248.cpp
    src/hexa_5249.cpp
    src/hexa_5250.cpp
    src/hexa_5251.cpp
    src/hexa_5252.cpp
    src/hexa_5253.cpp
    src/hexa_5254.cpp
    src/hexa_5255.cpp
    src/hexa_5256.cpp
    src/hexa_5257.cpp
    src/hexa_5258.cpp
    src/hexa_5259.cpp
    src/hexa_5260.cpp
    src/hexa_5261.cpp
    src/hexa_5262.cpp
    src/hexa_5263.cpp
    src/hexa_5264.cpp
    src/hexa_5265.cpp
    src/hexa_5266.cpp
    src/hexa_5267.cpp
    src/hexa_5268.cpp
    src/hexa_5269.cpp
    src/hexa_5270.cpp
    src/hexa_5271.cpp
    src/hexa_5272.cpp
    src/hexa_5273.cpp
    src/hexa_5274.cpp
    src/hexa_5275.cpp
    src/hexa_5276.cpp
    src/hexa_5277.cpp
    src/hexa_5278.cpp
    src/hexa_5279.cpp
    src/hexa_5280.cpp
    src/hexa_5281.cpp
    src/hexa_5282.cpp
    src/hexa_5283.cpp
    src/hexa_5284.cpp
    src/hexa_5285.cpp
    src/hexa_5286.cpp
    src/hexa_5287.cpp
    src/hexa_5288.cpp
    src/hexa_5289.cpp
    src/hexa_5290.cpp
    src/hexa_5291.cpp
    src/hexa_5292.cpp
    src/hexa_5293.cpp
    src/hexa_5294.cpp
    src/hexa_5295.cpp
    src/hexa_5296.cpp
    src/hexa_5297.cpp
    src/hexa_5298.cpp
    src/hexa_5299.cpp
    src/hexa_5300.cpp
    src/hexa_5301.cpp
    src/hexa_5302.cpp
    src/hexa_5303.cpp
    src/hexa_5304.cpp
    src/hexa_5305.cpp
    src/hexa_5306.cpp
    src/hexa_5307.cpp
    src/hexa_5308.cpp
    src/hexa_5309.cpp
    src/hexa_5310.cpp
    src/hexa_5311.cpp
    src/hexa_5312.cpp
    src/hexa_5313.cpp
    src/hexa_5314.cpp
    src/hexa_5315.cpp
    src/hexa_5316.cpp
    src/hexa_5317.cpp
    src/hexa_5318.cpp
    src/hexa_5319.cpp
    src/hexa_5320.cpp
    src/hexa_5321.cpp
    src/hexa_5322.cpp
    src/hexa_5323.cpp
    src/hexa_5324.cpp
    src/hexa_5325.cpp
    src/hexa_5326.cpp
    src/hexa_5327.cpp
    src/hexa_5328.cpp
    src/hexa_5329.cpp
    src/hexa_5330.cpp
    src/hexa_5331.cpp
    src/hexa_5332.cpp
    src/hexa_5333.cpp
    src/hexa_5334.cpp
    src/hexa_5335.cpp
    src/hexa_5336.cpp
    src/hexa_5337.cpp
    src/hexa_5338.cpp
    src/hexa_5339.cpp
    src/hexa_5340.cpp
    src/hexa_5341.cpp
    src/hexa_5342.cpp
    src/hexa_5343.cpp
    src/hexa_5344.cpp
    src/hexa_5345.cpp
    src/hexa_5346.cpp
    src/hexa_5347.cpp
    src/hexa_5348.cpp
    src/hexa_5349.cpp
    src/hexa_5350.cpp
    src/hexa_5351.cpp
    src/hexa_5352.cpp
    src/hexa_5353.cpp
    src/hexa_5354.cpp
    src/hexa_5355.cpp
    src/hexa_5356.cpp
    src/hexa_5357.cpp
    src/hexa_5358.cpp
    src/hexa_5359.cpp
    src/hexa_5360.cpp
    src/hexa_5361.cpp
    src/hexa_5362.cpp
    src/hexa_5363.cpp
    src/hexa_5364.cpp
    src/hexa_5365.cpp
    src/hexa_5366.cpp
    src/hexa_5367.cpp
    src/hexa_5368.cpp
    src/hexa_5369.cpp
    src/hexa_5370.cpp
    src/hexa_5371.cpp
    src/hexa_5372.cpp
    src/hexa_5373.cpp
    src/hexa_5374.cpp
    src/hexa_5375.cpp
    src/hexa_5376.cpp
    src/hexa_5377.cpp
    src/hexa_5378.cpp
    src/hexa_5379.cpp
    src/hexa_5380.cpp
    src/hexa_5381.cpp
    src/hexa_5382.cpp
    src/hexa_5383.cpp
    src/hexa_5384.cpp
    src/hexa_5385.cpp
    src/hexa_5386.cpp
    src/hexa_5387.cpp
    src/hexa_5388.cpp
    src/hexa_5389.cpp
    src/hexa_5390.cpp
    src/hexa_5391.cpp
    src/hexa_5392.cpp
    src/hexa_5393.cpp
    src/hexa_5394.cpp
    src/hexa_5395.cpp
    src/hexa_5396.cpp
    src/hexa_5397.cpp
    src/hexa_5398.cpp
    src/hexa_5399.cpp
    src/hexa_5400.cpp
    src/hexa_5401.cpp
    src/hexa_5402.cpp
    src/hexa_5403.cpp
    src/hexa_5404.cpp
    src/hexa_5405.cpp
    src/hexa_5406.cpp
    src/hexa_5407.cpp
    src/hexa_5408.cpp
    src/hexa_5409.cpp
    src/hexa_5410.cpp
    src/hexa_5411.cpp
    src/hexa_5412.cpp
    src/hexa_5413.cpp
    src/hexa_5414.cpp
    src/hexa_5415.cpp
    src/hexa_5416.cpp
    src/hexa_5417.cpp
    src/hexa_5418.cpp
    src/hexa_5419.cpp
    src/hexa_5420.cpp
    src/hexa_5421.cpp
    src/hexa_5422.cpp
    src/hexa_5423.cpp
    src/hexa_5424.cpp
    src/hexa_5425.cpp
    src/hexa_5426.cpp
    src/hexa_5427.cpp
    src/hexa_5428.cpp
    src/hexa_5429.cpp
    src/hexa_5430.cpp
    src/hexa_5431.cpp
    src/hexa_5432.cpp
    src/hexa_5433.cpp
    src/hexa_5434.cpp
    src/hexa_5435.cpp
    src/hexa_5436.cpp
    src/hexa_5437.cpp
    src/hexa_5438.cpp
    src/hexa_5439.cpp
    src/hexa_5440.cpp
    src/hexa_5441.cpp
    src/hexa_5442.cpp
    src/hexa_5443.cpp
    src/hexa_5444.cpp
    src/hexa_5445.cpp
    src/hexa_5446.cpp
    src/hexa_5447.cpp
    src/hexa_5448.cpp
    src/hexa_5449.cpp
    src/hexa_5450.cpp
    src/hexa_5451.cpp
    src/hexa_5452.cpp
    src/hexa_5453.cpp
    src/hexa_5454.cpp
    src/hexa_5455.cpp
    src/hexa_5456.cpp
    src/hexa_5457.cpp
    src/hexa_5458.cpp
    src/hexa_5459.cpp
    src/hexa_5460.cpp
    src/hexa_5461.cpp
    src/hexa_5462.cpp
    src/hexa_5463.cpp
    src/hexa_5464.cpp
    src/hexa_5465.cpp
    src/hexa_5466.cpp
    src/hexa_5467.cpp
    src/hexa_5468.cpp
    src/hexa_5469.cpp
    src/hexa_5470.cpp
    src/hexa_5471.cpp
    src/hexa_5472.cpp
    src/hexa_5473.cpp
    src/hexa_5474.cpp
    src/hexa_5475.cpp
    src/hexa_5476.cpp
    src/hexa_5477.cpp
    src/hexa_5478.cpp
    src/hexa_5479.cpp
    src/hexa_5480.cpp
    src/hexa_5481.cpp
    src/hexa_5482.cpp
    src/hexa_5483.cpp
    src/hexa_5484.cpp
    src/hexa_5485.cpp
    src/hexa_5486.cpp
    src/hexa_5487.cpp
    src/hexa_5488.cpp
    src/hexa_5489.cpp
    src/hexa_5490.cpp
    src/hexa_5491.cpp
    src/hexa_5492.cpp
    src/hexa_5493.cpp
    src/hexa_5494.cpp
    src/hexa_5495.cpp
    src/hexa_5496.cpp
    src/hexa_5497.cpp
    src/hexa_5498.cpp
    src/hexa_5499.cpp
    src/hexa_5500.cpp
    src/hexa_5501.cpp
    src/hexa_5502.cpp
    src/hexa_5503.cpp
    src/hexa_5504.cpp
    src/hexa_5505.cpp
    src/hexa_5506.cpp
    src/hexa_5507.cpp
    src/hexa_5508.cpp
    src/hexa_5509.cpp
    src/hexa_5510.cpp
    src/hexa_5511.cpp
    src/hexa_5512.cpp
    src/hexa_5513.cpp
    src/hexa_5514.cpp
    src/hexa_5515.cpp
    src/hexa_5516.cpp
    src/hexa_5517.cpp
    src/hexa_5518.cpp
    src/hexa_5519.cpp
    src/hexa_5520.cpp
    src/hexa_5521.cpp
    src/hexa_5522.cpp
    src/hexa_5523.cpp
    src/hexa_5524.cpp
    src/hexa_5525.cpp
    src/hexa_5526.cpp
    src/hexa_5527.cpp
    src/hexa_5528.cpp
    src/hexa_5529.cpp
    src/hexa_5530.cpp
    src/hexa_5531.cpp
    src/hexa_5532.cpp
    src/hexa_5533.cpp
    src/hexa_5534.cpp
    src/hexa_5535.cpp
    src/hexa_5536.cpp
    src/hexa_5537.cpp
    src/hexa_5538.cpp
    src/hexa_5539.cpp
    src/hexa_5540.cpp
    src/hexa_5541.cpp
    src/hexa_5542.cpp
    src/hexa_5543.cpp
    src/hexa_5544.cpp
    src/hexa_5545.cpp
    src/hexa_5546.cpp
    src/hexa_5547.cpp
    src/hexa_5548.cpp
    src/hexa_5549.cpp
    src/hexa_5550.cpp
    src/hexa_5551.cpp
    src/hexa_5552.cpp
    src/hexa_5553.cpp
    src/hexa_5554.cpp
    src/hexa_5555.cpp
    src/hexa_5556.cpp
    src/hexa_5557.cpp
    src/hexa_5558.cpp
    src/hexa_5559.cpp
    src/hexa_5560.cpp
    src/hexa_5561.cpp
    src/hexa_5562.cpp
    src/hexa_5563.cpp
    src/hexa_5564.cpp
    src/hexa_5565.cpp
    src/hexa_5566.cpp
    src/hexa_5567.cpp
    src/hexa_5568.cpp
    src/hexa_5569.cpp
    src/hexa_5570.cpp
    src/hexa_5571.cpp
    src/hexa_5572.cpp
    src/hexa_5573.cpp
    src/hexa_5574.cpp
    src/hexa_5575.cpp
    src/hexa_5576.cpp
    src/hexa_5577.cpp
    src/hexa_5578.cpp
    src/hexa_5579.cpp
    src/hexa_5580.cpp
    src/hexa_5581.cpp
    src/hexa_5582.cpp
    src/hexa_5583.cpp
    src/hexa_5584.cpp
    src/hexa_5585.cpp
    src/hexa_5586.cpp
    src/hexa_5587.cpp
    src/hexa_5588.cpp
    src/hexa_5589.cpp
    src/hexa_5590.cpp
    src/hexa_5591.cpp
    src/hexa_5592.cpp
    src/hexa_5593.cpp
    src/hexa_5594.cpp
    src/hexa_5595.cpp
    src/hexa_5596.cpp
    src/hexa_5597.cpp
    src/hexa_5598.cpp
    src/hexa_5599.cpp
    src/hexa_5600.cpp
    src/hexa_5601.cpp
    src/hexa_5602.cpp
    src/hexa_5603.cpp
    src/hexa_5604.cpp
    src/hexa_5605.cpp
    src/hexa_5606.cpp
    src/hexa_5607.cpp
    src/hexa_5608.cpp
    src/hexa_5609.cpp
    src/hexa_5610.cpp
    src/hexa_5611.cpp
    src/hexa_5612.cpp
    src/hexa_5613.cpp
    src/hexa_5614.cpp
    src/hexa_5615.cpp
    src/hexa_5616.cpp
    src/hexa_5617.cpp
    src/hexa_5618.cpp
    src/hexa_5619.cpp
    src/hexa_5620.cpp
    src/hexa_5621.cpp
    src/hexa_5622.cpp
    src/hexa_5623.cpp
    src/hexa_5624.cpp
    src/hexa_5625.cpp
    src/hexa_5626.cpp
    src/hexa_5627.cpp
    src/hexa_5628.cpp
    src/hexa_5629.cpp
    src/hexa_5630.cpp
    src/hexa_5631.cpp
    src/hexa_5632.cpp
    src/hexa_5633.cpp
    src/hexa_5634.cpp
    src/hexa_5635.cpp
    src/hexa_5636.cpp
    src/hexa_5637.cpp
    src/hexa_5638.cpp
    src/hexa_5639.cpp
    src/hexa_5640.cpp
    src/hexa_5641.cpp
    src/hexa_5642.cpp
    src/hexa_5643.cpp
    src/hexa_5644.cpp
    src/hexa_5645.cpp
    src/hexa_5646.cpp
    src/hexa_5647.cpp
    src/hexa_5648.cpp
    src/hexa_5649.cpp
    src/hexa_5650.cpp
    src/hexa_5651.cpp
    src/hexa_5652.cpp
    src/hexa_5653.cpp
    src/hexa_5654.cpp
    src/hexa_5655.cpp
    src/hexa_5656.cpp
    src/hexa_5657.cpp
    src/hexa_5658.cpp
    src/hexa_5659.cpp
    src/hexa_5660.cpp
    src/hexa_5661.cpp
    src/hexa_5662.cpp
    src/hexa_5663.cpp
    src/hexa_5664.cpp
    src/hexa_5665.cpp
    src/hexa_5666.cpp
    src/hexa_5667.cpp
    src/hexa_5668.cpp
    src/hexa_5669.cpp
    src/hexa_5670.cpp
    src/hexa_5671.cpp
    src/hexa_5672.cpp
    src/hexa_5673.cpp
    src/hexa_5674.cpp
    src/hexa_5675.cpp
    src/hexa_5676.cpp
    src/hexa_5677.cpp
    src/hexa_5678.cpp
    src/hexa_5679.cpp
    src/hexa_5680.cpp
    src/hexa_5681.cpp
    src/hexa_5682.cpp
    src/hexa_5683.cpp
    src/hexa_5684.cpp
    src/hexa_5685.cpp
    src/hexa_5686.cpp
    src/hexa_5687.cpp
    src/hexa_5688.cpp
    src/hexa_5689.cpp
    src/hexa_5690.cpp
    src/hexa_5691.cpp
    src/hexa_5692.cpp
    src/hexa_5693.cpp
    src/hexa_5694.cpp
    src/hexa_5695.cpp
    src/hexa_5696.cpp
    src/hexa_5697.cpp
    src/hexa_5698.cpp
    src/hexa_5699.cpp
    src/hexa_5700.cpp
    src/hexa_5701.cpp
    src/hexa_5702.cpp
    src/hexa_5703.cpp
    src/hexa_5704.cpp
    src/hexa_5705.cpp
    src/hexa_5706.cpp
    src/hexa_5707.cpp
    src/hexa_5708.cpp
    src/hexa_5709.cpp
    src/hexa_5710.cpp
    src/hexa_5711.cpp
    src/hexa_5712.cpp
    src/hexa_5713.cpp
    src/hexa_5714.cpp
    src/hexa_5715.cpp
    src/hexa_5716.cpp
    src/hexa_5717.cpp
    src/hexa_5718.cpp
    src/hexa_5719.cpp
    src/hexa_5720.cpp
    src/hexa_5721.cpp
    src/hexa_5722.cpp
    src/hexa_5723.cpp
    src/hexa_5724.cpp
    src/hexa_5725.cpp
    src/hexa_5726.cpp
    src/hexa_5727.cpp
    src/hexa_5728.cpp
    src/hexa_5729.cpp
    src/hexa_5730.cpp
    src/hexa_5731.cpp
    src/hexa_5732.cpp
    src/hexa_5733.cpp
    src/hexa_5734.cpp
    src/hexa_5735.cpp
    src/hexa_5736.cpp
    src/hexa_5737.cpp
    src/hexa_5738.cpp
    src/hexa_5739.cpp
    src/hexa_5740.cpp
    src/hexa_5741.cpp
    src/hexa_5742.cpp
    src/hexa_5743.cpp
    src/hexa_5744.cpp
    src/hexa_5745.cpp
    src/hexa_5746.cpp
    src/hexa_5747.cpp
    src/hexa_5748.cpp
    src/hexa_5749.cpp
    src/hexa_5750.cpp
    src/hexa_5751.cpp
    src/hexa_5752.cpp
    src/hexa_5753.cpp
    src/hexa_5754.cpp
    src/hexa_5755.cpp
    src/hexa_5756.cpp
    src/hexa_5757.cpp
    src/hexa_5758.cpp
    src/hexa_5759.cpp
    src/hexa_5760.cpp
    src/hexa_5761.cpp
    src/hexa_5762.cpp
    src/hexa_5763.cpp
    src/hexa_5764.cpp
    src/hexa_5765.cpp
    src/hexa_5766.cpp
    src/hexa_5767.cpp
    src/hexa_5768.cpp
    src/hexa_5769.cpp
    src/hexa_5770.cpp
    src/hexa_5771.cpp
    src/hexa_5772.cpp
    src/hexa_5773.cpp
    src/hexa_5774.cpp
    src/hexa_5775.cpp
    src/hexa_5776.cpp
    src/hexa_5777.cpp
    src/hexa_5778.cpp
    src/hexa_5779.cpp
    src/hexa_5780.cpp
    src/hexa_5781.cpp
    src/hexa_5782.cpp
    src/hexa_5783.cpp
    src/hexa_5784.cpp
    src/hexa_5785.cpp
    src/hexa_5786.cpp
    src/hexa_5787.cpp
    src/hexa_5788.cpp
    src/hexa_5789.cpp
    src/hexa_5790.cpp
    src/hexa_5791.cpp
    src/hexa_5792.cpp
    src/hexa_5793.cpp
    src/hexa_5794.cpp
    src/hexa_5795.cpp
    src/hexa_5796.cpp
    src/hexa_5797.cpp
    src/hexa_5798.cpp
    src/hexa_5799.cpp
    src/hexa_5800.cpp
    src/hexa_5801.cpp
    src/hexa_5802.cpp
    src/hexa_5803.cpp
    src/hexa_5804.cpp
    src/hexa_5805.cpp
    src/hexa_5806.cpp
    src/hexa_5807.cpp
    src/hexa_5808.cpp
    src/hexa_5809.cpp
    src/hexa_5810.cpp
    src/hexa_5811.cpp
    src/hexa_5812.cpp
    src/hexa_5813.cpp
    src/hexa_5814.cpp
    src/hexa_5815.cpp
    src/hexa_5816.cpp
    src/hexa_5817.cpp
    src/hexa_5818.cpp
    src/hexa_5819.cpp
    src/hexa_5820.cpp
    src/hexa_5821.cpp
    src/hexa_5822.cpp
    src/hexa_5823.cpp
    src/hexa_5824.cpp
    src/hexa_5825.cpp
    src/hexa_5826.cpp
    src/hexa_5827.cpp
    src/hexa_5828.cpp
    src/hexa_5829.cpp
    src/hexa_5830.cpp
    src/hexa_5831.cpp
    src/hexa_5832.cpp
    src/hexa_5833.cpp
    src/hexa_5834.cpp
    src/hexa_5835.cpp
    src/hexa_5836.cpp
    src/hexa_5837.cpp
    src/hexa_5838.cpp
    src/hexa_5839.cpp
    src/hexa_5840.cpp
    src/hexa_5841.cpp
    src/hexa_5842.cpp
    src/hexa_5843.cpp
    src/hexa_5844.cpp
    src/hexa_5845.cpp
    src/hexa_5846.cpp
    src/hexa_5847.cpp
    src/hexa_5848.cpp
    src/hexa_5849.cpp
    src/hexa_5850.cpp
    src/hexa_5851.cpp
    src/hexa_5852.cpp
    src/hexa_5853.cpp
    src/hexa_5854.cpp
    src/hexa_5855.cpp
    src/hexa_5856.cpp
    src/hexa_5857.cpp
    src/hexa_5858.cpp
    src/hexa_5859.cpp
    src/hexa_5860.cpp
    src/hexa_5861.cpp
    src/hexa_5862.cpp
    src/hexa_5863.cpp
    src/hexa_5864.cpp
    src/hexa_5865.cpp
    src/hexa_5866.cpp
    src/hexa_5867.cpp
    src/hexa_5868.cpp
    src/hexa_5869.cpp
    src/hexa_5870.cpp
    src/hexa_5871.cpp
    src/hexa_5872.cpp
    src/hexa_5873.cpp
    src/hexa_5874.cpp
    src/hexa_5875.cpp
    src/hexa_5876.cpp
    src/hexa_5877.cpp
    src/hexa_5878.cpp
    src/hexa_5879.cpp
    src/hexa_5880.cpp
    src/hexa_5881.cpp
    src/hexa_5882.cpp
    src/hexa_5883.cpp
    src/hexa_5884.cpp
    src/hexa_5885.cpp
    src/hexa_5886.cpp
    src/hexa_5887.cpp
    src/hexa_5888.cpp
    src/hexa_5889.cpp
    src/hexa_5890.cpp
    src/hexa_5891.cpp
    src/hexa_5892.cpp
    src/hexa_5893.cpp
    src/hexa_5894.cpp
    src/hexa_5895.cpp
    src/hexa_5896.cpp
    src/hexa_5897.cpp
    src/hexa_5898.cpp
    src/hexa_5899.cpp
    src/hexa_5900.cpp
    src/hexa_5901.cpp
    src/hexa_5902.cpp
    src/hexa_5903.cpp
    src/hexa_5904.cpp
    src/hexa_5905.cpp
    src/hexa_5906.cpp
    src/hexa_5907.cpp
    src/hexa_5908.cpp
    src/hexa_5909.cpp
    src/hexa_5910.cpp
    src/hexa_5911.cpp
    src/hexa_5912.cpp
    src/hexa_5913.cpp
    src/hexa_5914.cpp
    src/hexa_5915.cpp
    src/hexa_5916.cpp
    src/hexa_5917.cpp
    src/hexa_5918.cpp
    src/hexa_5919.cpp
    src/hexa_5920.cpp
    src/hexa_5921.cpp
    src/hexa_5922.cpp
    src/hexa_5923.cpp
    src/hexa_5924.cpp
    src/hexa_5925.cpp
    src/hexa_5926.cpp
    src/hexa_5927.cpp
    src/hexa_5928.cpp
    src/hexa_5929.cpp
    src/hexa_5930.cpp
    src/hexa_5931.cpp
    src/hexa_5932.cpp
    src/hexa_5933.cpp
    src/hexa_5934.cpp
    src/hexa_5935.cpp
    src/hexa_5936.cpp
    src/hexa_5937.cpp
    src/hexa_5938.cpp
    src/hexa_5939.cpp
    src/hexa_5940.cpp
    src/hexa_5941.cpp
    src/hexa_5942.cpp
    src/hexa_5943.cpp
    src/hexa_5944.cpp
    src/hexa_5945.cpp
    src/hexa_5946.cpp
    src/hexa_5947.cpp
    src/hexa_5948.cpp
    src/hexa_5949.cpp
    src/hexa_5950.cpp
    src/hexa_5951.cpp
    src/hexa_5952.cpp
    src/hexa_5953.cpp
    src/hexa_5954.cpp
    src/hexa_5955.cpp
    src/hexa_5956.cpp
    src/hexa_5957.cpp
    src/hexa_5958.cpp
    src/hexa_5959.cpp
    src/hexa_5960.cpp
    src/hexa_5961.cpp
    src/hexa_5962.cpp
    src/hexa_5963.cpp
    src/hexa_5964.cpp
    src/hexa_5965.cpp
    src/hexa_5966.cpp
    src/hexa_5967.cpp
    src/hexa_5968.cpp
    src/hexa_5969.cpp
    src/hexa_5970.cpp
    src/hexa_5971.cpp
    src/hexa_5972.cpp
    src/hexa_5973.cpp
    src/hexa_5974.cpp
    src/hexa_5975.cpp
    src/hexa_5976.cpp
    src/hexa_5977.cpp
    src/hexa_5978.cpp
    src/hexa_5979.cpp
    src/hexa_5980.cpp
    src/hexa_5981.cpp
    src/hexa_5982.cpp
    src/hexa_5983.cpp
    src/hexa_5984.cpp
    src/hexa_5985.cpp
    src/hexa_5986.cpp
    src/hexa_5987.cpp
    src/hexa_5988.cpp
    src/hexa_5989.cpp
    src/hexa_5990.cpp
    src/hexa_5991.cpp
    src/hexa_5992.cpp
    src/hexa_5993.cpp
    src/hexa_5994.cpp
    src/hexa_5995.cpp
    src/hexa_5996.cpp
    src/hexa_5997.cpp
    src/hexa_5998.cpp
    src/hexa_5999.cpp
    endif()
    message(STATUS "Extracting SQLite amalgamation...")
    file(MAKE_DIRECTORY "${SQLITE3_DIR}")
    execute_process(
        COMMAND python3 -c "import zipfile,sys; zipfile.ZipFile(sys.argv[1]).extractall(sys.argv[2])" "${CMAKE_BINARY_DIR}/sqlite3.zip" "${CMAKE_BINARY_DIR}"
        WORKING_DIRECTORY "${CMAKE_BINARY_DIR}"
        RESULT_VARIABLE extract_result
        ERROR_VARIABLE extract_err
    )
    if(NOT extract_result EQUAL 0)
        message(FATAL_ERROR "SQLite extraction failed (${extract_result}): ${extract_err}")
    endif()
    if(NOT EXISTS "${SQLITE3_SRC}")
        file(GLOB extracted_files "${CMAKE_BINARY_DIR}/sqlite*")
        message(FATAL_ERROR "SQLite extraction failed — sqlite3.c not found. Extracted files in ${CMAKE_BINARY_DIR}: ${extracted_files}")
    endif()
    message(STATUS "SQLite3 amalgamation extracted to ${SQLITE3_DIR}")
endif()
# Add to build after download+extraction
target_sources(progressive_native PRIVATE "${SQLITE3_SRC}")
target_include_directories(progressive_native PUBLIC "${SQLITE3_DIR}")

target_include_directories(
    progressive_native
    PUBLIC
    include
)

find_library(log_lib log)

# --- Binary size optimization ---
# 491 C++ modules → 206MB .so → -Os + LTO + dead code stripping
target_compile_options(progressive_native PRIVATE -Os -flto -fdata-sections -ffunction-sections -fvisibility=hidden)
target_link_options(progressive_native PRIVATE -flto -Wl,--gc-sections -Wl,--exclude-libs,ALL)

# --- libolm E2EE crypto (C/C++ native) ---
add_subdirectory(libolm)

target_link_libraries(
    progressive_native
    ${log_lib}
    olm
)

target_compile_definitions(progressive_native PRIVATE PROGRESSIVE_HAS_OLM=1)

# SQLite3 amalgamation compile flags (optimize for Android, downloaded at build time)
set_source_files_properties(
    "${SQLITE3_DIR}/sqlite3.c"
    PROPERTIES COMPILE_FLAGS "-DSQLITE_THREADSAFE=1 -DSQLITE_OMIT_LOAD_EXTENSION -DSQLITE_DEFAULT_MEMSTATUS=0 -DSQLITE_DEFAULT_WAL_SYNCHRONOUS=1 -DSQLITE_LIKE_DOESNT_MATCH_BLOBS -DSQLITE_MAX_EXPR_DEPTH=0 -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED -DSQLITE_OMIT_PROGRESS_CALLBACK -DSQLITE_OMIT_SHARED_CACHE -DSQLITE_USE_ALLOCA -Os"
)

